# LLM-exercise

./: .gitignore  LLM_fine_tuning_continued_pretraining.ipynb  LLM_fine_tuning_continued_pretraining_quantised.ipynb  LLM_intruction_fine_tuning.ipynb  QdrantClient.ipynb  RAG_for_custom_LLM.ipynb  RAG_llama_transformer.ipynb  RAG_llama_transformer_faiss.ipynb  RAG_vLLM_quadrant.ipynb  gemini_rag_file_search.ipynb  information_retriever_example.ipynb  pyproject.toml  rag_ollama_qdrant.ipynb  rag_with_chromadb.ipynb  rag_with_faiss.py  remove_errors_notebook.py
code/: GGUF_simple_chatbot.py  Kimi-K2-Thinking_practise.ipynb  LLM_QLoRA_Continued_Pretraining_Unlabeled.ipynb  LLM_instruction_fine_tuning_quantised.ipynb  RAG_llama_transformer_faiss.ipynb  RAG_vLLM_quadrant.ipynb  chunking_for_RAG.ipynb  data_designer_Counsellor_patient.ipynb  information_retriever_example.ipynb  rag_ollama_qdrant.ipynb  rag_vertex_ai.py  rag_with_chromadb.ipynb  remove_errors_notebook.py  unsloth_training_inference.ipynb
code/chroma_db/: chroma.sqlite3
code/data/: resume.txt
