[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "chromadb>=1.1.1",
    "compressed-tensors>=0.12.2",
    "datasets>=4.2.0",
    "faiss-gpu>=1.7.2",
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "llama-index-core>=0.14.4",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-ollama>=0.8.0",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-vector-stores-faiss>=0.5.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "openai>=2.7.1",
    "peft>=0.17.1",
    "qdrant-client>=1.15.1",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
